# simple_satoshi_note

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/satoshi_note_backend/: Cargo.toml  satoshi_note_backend.did
src/satoshi_note_backend/src/: lib.rs
src/satoshi_note_frontend/: package.json
src/satoshi_note_frontend/src/lib/: canisters.js
