[package]
name = "satoshi_note_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13.1"
ic-cdk-macros = "0.9.0"
lazy_static = "1.4.*"
serde_json = "1.0.74"
serde = "1.0.133"
ic-types = "0.7.0"
candid = "0.10.5"
ic-ledger-types = "0.10.0"
icrc-ledger-types = "0.1.5"